--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
-PGHOST='localhost'
-PGPORT=5432
-PGDATABASE='DATABASE'
-PGUSER='USER'
-PGPASSWORD='PASSWORD'
+PGHOST=HOST
+PGPORT=PORT
+PGDATABASE=DATABASE
+PGUSER=USER
+PGPASSWORD=PASSWORD
